WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36283
REGRESSION: CSS3 test of getComputedStyle() for background-repeat fails
https://bugs.webkit.org/show_bug.cgi?id=36283
Summary
REGRESSION: CSS3 test of getComputedStyle() for background-repeat fails
Simon Fraser (smfr)
Reported
2010-03-17 20:37:34 PDT
This test fails:
http://samples.msdn.microsoft.com/ietestcenter/domstyle/backgroundRepeat.htm
It expects "repeat-x", we return "repeat no-repeat".
Attachments
Patch
(6.21 KB, patch)
2010-03-18 10:59 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-03-18 10:59:34 PDT
Created
attachment 51054
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-03-18 11:01:31 PDT
Comment on
attachment 51054
[details]
Patch
> Index: LayoutTests/fast/backgrounds/background-repeat-computed-style.html > =================================================================== > --- LayoutTests/fast/backgrounds/background-repeat-computed-style.html (revision 0) > +++ LayoutTests/fast/backgrounds/background-repeat-computed-style.html (revision 0) > @@ -0,0 +1,28 @@ > +<html>
More weirdness.
> \ No newline at end of file
Fix? r=me
Dave Hyatt
Comment 3
2010-03-18 11:03:56 PDT
Fixed in
r56171
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug