https://bugs.webkit.org/show_bug.cgi?id=36283

Reviewed by Simon Fraser.

The wrong constants were being used for the code that attempted to compact the background-repeat shorthand to
a single value.

Added fast/backgrounds/background-repeat-computed-style.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::fillRepeatToCSSValue):



Canonical link: https://commits.webkit.org/47465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56171 268f45cc-cd09-0410-ab3c-d52691b4dbfc